--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ importlib-metadata==1.2.0
 ipykernel==5.1.3
 ipython==7.10.1
 ipython-genutils==0.2.0
-ipywidget==7.5.1
+ipywidgets==7.5.1
 jedi==0.15.1
 Jinja2==2.10.3
 json5==0.8.5
