--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ jupyter-core==4.6.1
 jupyterlab==1.2.3
 jupyterlab-server==1.0.6
 MarkupSafe==1.1.1
+matplotlib==3.1.1
 mistune==0.8.4
 more-itertools==8.0.2
 mpmath==1.1.0
@@ -44,6 +45,7 @@ simpy==3.0.11
 six==1.13.0
 sympy==1.4
 testpath==0.4.4
+tikzplotlib==0.9.1
 tornado==6.0.3
 traitlets==4.3.3
 wcwidth==0.1.7
